Fix: Null-safety guards and dead-branch cleanup from static analysis
A full IntelliJ inspection pass flagged several possible-NPE and
dataflow-proven dead branches; fixed each individually rather than
suppressing the warnings:

- BlockListener: handleLeafPlacement re-fetched Bukkit.getPlayer(playerId)
  and re-validated the session purely to null-check it - dead
  revalidation that was also the actual NPE source, since the caller
  already validated both. Removed it, and simplified the now
  dataflow-proven-always-true player/blockType guards (event.getPlayer()
  and the WATER/LAVA else-branch are both provably non-null/LAVA here).
- ConfigMergeUtil: null-guard target.getList(path) before .isEmpty().
- DragonSetHandler: null-guard explosionTask.cancel() the same way as
  CashBlasterHandler's vortexTask (runTaskTimer can return null).
- GameplayItemFactory: null-guard Registry.SOUNDS.getKey(...) before
  handing it to Consumable.Builder#sound.
- RuneManager: null-guard the EnchantEntry PDCDetection.getRune(item)
  can return in rechargeOneRune.
- DamageListener/KitService/MoveListener/RuneListener/WardenGlovesHandler:
  simplified guards IntelliJ's dataflow analysis proves are always
  true/false given the actual Paper API @NotNull contracts (event.getPlayer(),
  getItemInMainHand()/getItemInOffHand() never return null).
- IceFanHandler: Math.clamp(remaining, 0, max) - durability clamped
  into [0, max] as before.
- SQLiteProvider: File.createNewFile()'s return value was discarded;
  now throws instead of silently continuing to open a connection
  against a file that failed to be created.
- InteractListener: dropped a redundant return after the last check
  in the item-interaction delegation chain.